# RustProjectStore

Compress/: Cargo.toml
Compress/src/: compressed  index.rs
IncomeDivider/: Cargo.toml
IncomeDivider/ui/: appwindow.slint
Practice/src/: example.txt  main.rs
my-first-rust-project/: Cargo.toml
my-first-rust-project/src/: main.rs
my-first-rust-project/ui/: appwindow.slint
