[package]
name = "my-first-rust-project"
version = "0.1.0"
authors = ["shiva <shivanshu singh>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "my-first-rust-project"
identifier = "io.github.Stubbornblood.RustProjectStore"
description = "A desktop app that divides up income"

